assets/css/_general.scss
/* ... */
@include media-breakpoint-up(md) {
  header .container {
    flex-direction: row
  }
  .navbar {
    margin: 0;
  }
}


.page,
.post{
  
  .page-title{
    text-align: center;
    @extend .my-5;
  }

  .page-content{
    max-width: 640px;
    text-align: left;
    @extend .mx-auto;
    @extend .mb-5;

    blockquote p {
      font-style: italic;
      background: mix($light, #f0f0f0, 50%);
      padding: 10px;
      margin-left: 20px;
      margin-right: 20px;
    }

    > p a {
      color: $primary-dark;
      border-bottom: 2px solid $secondary;

      &:hover {
        color: $dark;
        text-decoration: none;
        border-bottom-width: 3px;
      }
    }
  }
}

.hero {
  padding: 1.5rem .5rem;
  text-align: center;
  @extend .mb-5;
  @include gradient(mix( $primary, white, 50% ), mix( $primary, white, 20% ));

  .page-title{
    font-size: 2.5rem;
    line-height: 3.5rem;
    letter-spacing: .015em;
  }
}

.page-lead {
  color: $dark;
  font-size: 1.375rem;
  font-weight: 300;
  max-width: 640px;
  margin: 3.5rem auto 1rem;
}


// Home

.home-hero {
  padding: 3rem 0 3.25rem;
  margin-bottom: 0 !important;
  text-align: center;
  @include gradient;

  .lead {
    font-size: 1.625rem;
    letter-spacing: .015em;
    line-height: 2.5rem;
    max-width: 620px;
    margin-bottom: 0;
    padding-top: 2rem;
    @extend .mx-auto;

    span{
      font-weight: 700;
    }
  }
}

#main-navigation {
  background: $dark;

  .nav-link {
    color: white;
    padding: 1rem 1.5rem;
    text-align: center;

    &:hover{
      color: $dark;
      background: $light;
    }
   
    @include media-breakpoint-down(md) {
      padding-right: 1rem;
      padding-left: 1rem;
    }
  }

  @media (max-width: 850px) {
  //@include media-breakpoint-down(xs) {
    .navbar-nav{
      display: block;
      width: 100%;
      border: none;
    }
    .nav-link {
      padding: .75rem .5rem;
      border: none;
      border-bottom: 1px solid $light;
    }
  }
}

#home-latest-news {
  margin-top: 2rem;

  .post{
    text-align: left;
    margin-bottom: 2rem;
  }

  .page-image {
    @extend .img-fluid;
    margin-bottom: 1rem;
  }

  h3{
    line-height: 2.5rem;
    border-bottom: 3px solid $secondary;
  }

  .page-lead {
    margin-top: 1rem;
    font-size: 1rem;
    font-weight: 400;
  }
}

#home-description{
  font-family: $font-family-titles;
  padding: 4rem 0 3rem;
  background: mix($light, #f0f0f0, 50%);
  font-size: 1.125rem;
  line-height: 1.875rem;
  text-align: center;
}

.home-item {
  margin: 6rem 0;
  @extend .row;
  
  .col {
    padding: 0;
  }

  img {
    width: 100%;
    max-width: 200px;
    height: auto;
    margin-top: .5rem;
  }

  h2 {
    display: inline-block;
    font-size: 2rem;
    padding-bottom: .5rem;
    border-bottom: 3px solid $secondary;
  }

  p {
    margin-top: 1rem;
    margin-bottom: 1.5rem;
  }

  &.align-right {

    .col-7 {
      text-align: right;
      @extend .justify-content-end;
    }
  }

  @include media-breakpoint-up(sm) {

    img {
      float: right;
      width: 80%;
      margin-right: 20%;
    }

    &.align-right img {
      float: left;
      margin-right: 0;
      margin-left: 20%;
    }
  }
}



// Pages

.page-content {
  > p,
  li {
    font-size: 1.125rem;
    line-height: 1.75rem;
  }

  ul {
    margin-bottom: 2rem;
  }
  li {
    margin-bottom: .5rem;
  }

  h3 {
    display: inline-block;
    font-size: 2rem;
    padding-bottom: .5rem;
    margin-bottom: 2rem;
    margin-top: 1rem;
    border-bottom: 3px solid $secondary;
  }

  p {
    margin-bottom: 1.5rem;
  }

  .img-fluid{
    margin-bottom: .5rem;
  }

  .page-image {
    @extend .img-fluid;
    margin-bottom: 2rem;
  }

  // Video
  .video{
    position: relative;
    height: 0;
    padding-bottom: 56.25%; /* 16:9 */
    margin: 2rem 0;

    iframe {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
    }
  }
}


.resources-list {
  padding: 0;
  margin-bottom: 2rem;

  li {
    list-style: none;
    background-position: 0 5px;
    background-repeat: no-repeat;
    padding-left: 2rem;
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='#08A4CC' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.27 14.73a3.1 3.1 0 0 1 0-4.39L6.1 7.52 4.76 6.17 1.93 9A5 5 0 0 0 9 16.07l2.83-2.83-1.35-1.34-2.82 2.83a3.1 3.1 0 0 1-4.39 0zm3.6-2.2l5.67-5.65-1.42-1.42-5.66 5.66 1.42 1.42zM9 1.94L6.17 4.76 7.52 6.1l2.82-2.83a3.1 3.1 0 0 1 4.39 4.39l-2.83 2.82 1.34 1.35L16.07 9A5 5 0 0 0 9 1.93z'/%3E%3E%3C/svg%3E");

    a {
      color: $dark;
      border-bottom: 2px solid $secondary;
      
      &:hover {
        color: $primary-dark;
        text-decoration: none;
      }
    }
  }
}


// Posts

.post {
  text-align: center;
  margin-bottom: 3rem;

  .date {
    font-size: .875rem;
    color: $primary;
    margin: 0 0 .25rem;
  }

  .author {
    font-size: .875rem;
    color: $dark;
    font-weight: 600;
    padding-right: 1rem;
    margin-right: .75rem;
    border-right: 2px solid $secondary;
    text-transform: uppercase;
  }

  h3 {
    color: $dark;
    display: inline;
    line-height: 3rem;
    padding: 0;
  }

  a:hover{
    text-decoration: none;

    h3{
      border-color: $dark;
    }
  }
}

.project-list {
  padding: 0;

  li {
    list-style: none;
    text-align: center;

    a:hover {
      color: $dark;
      text-decoration: none;
    }
  }
}
/* ... */

